fixing scrolling issue on mobile (although it seems not to work on iOS v6)

--- a/static/stylesheets/cards.css
+++ b/static/stylesheets/cards.css
@@ -5,7 +5,7 @@ html, body {
     padding: 0;
     -webkit-font-smoothing: antialiased;
     word-wrap: break-word;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .material {
