--- a/static/stylesheets/map.css
+++ b/static/stylesheets/map.css
@@ -383,6 +383,8 @@ a.menu-item {
         background-color: white;
         display: none; /* default */
         z-index: 2;
+        height: 100%;
+        overflow: hidden;
     }
 
     #tools {
